<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            android:weightSum="4">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:textAllCaps="false"
                android:text="@string/salami"
                android:onClick="salamiClicked"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:textAllCaps="false"
                android:text="@string/thunfisch"
                android:onClick="thunfischClicked"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:textAllCaps="false"
                android:text="@string/margherita"
                android:onClick="margheritaClicked"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:textAllCaps="false"
                android:text="@string/free_choice"
                android:onClick="freeChoiceClicked"
                />

        </LinearLayout>

        <!-- LinearLayout with only one element to allow creating ImageView with 90% width -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">

            <ImageView
                android:layout_width="0sp"
                android:layout_height="40sp"
                android:layout_weight="9"
                android:layout_marginTop="40sp"
                android:background="@color/yellow"
                android:scaleType="fitCenter"
                android:src="@drawable/paypal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address_label"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_address_hint"
                android:backgroundTint="@color/magenta"
                android:cursorVisible="true"
                android:inputType="textPostalAddress"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>